# controllers/authController.ts
@@ -1,5 +1,11 @@
-import handleErrorAsync from "../service/handleErrorAsync"
+import { type Request, type Response, type NextFunction } from "express"
 import passport from "passport"
+import bcrypt from "bcryptjs"
+
+import handleErrorAsync from "../service/handleErrorAsync"
+import appError from "../service/appError"
+import User from "../models/testUsersModel"
+import { successHandler } from "../service/handler"
 
 export const authController = {
   google: {
@@ -14,5 +20,44 @@ export const authController = {
         // , { session: false } // session: false 會讓 req.user 為空
       )(req, res, next)
     })
+  },
+  line: {
+    login: handleErrorAsync(
+      async (req: Request, res: Response, next: NextFunction) => {
+        const { lineUserId, lineDisplayName, linePictureUrl, statusMessage } = req.body
+
+        if (typeof lineUserId !== "string" || lineUserId === "" || typeof lineDisplayName !== "string" || lineDisplayName === "" || typeof linePictureUrl !== "string" || linePictureUrl === "") {
+          appError("請提供 lineUserId, lineDisplayName, linePictureUrl", 400, next); return
+        }
+
+        try {
+          // 檢查使用者是否存在
+          let user = await User.findOne({ lineUserId })
+
+          if (user === null) {
+            const randomPassword = Math.random().toString(36).slice(-8)
+            const salt = await bcrypt.genSalt(10)
+            const hash = await bcrypt.hash(randomPassword, salt)
+
+            user = await User.create({
+              lineUserId,
+              name: lineDisplayName,
+              email: `${lineUserId}@line.com`,
+              photo: linePictureUrl,
+              messageBoard: statusMessage,
+              gender: "secret",
+              password: hash
+            })
+          }
+
+          user = await User.findOne({ lineUserId }).select("-password")
+
+          successHandler(res, "登入成功", user)
+        } catch (err) {
+          console.error(err)
+          appError("line 登入失敗，請重新登入", 401, next)
+        }
+      }
+    )
   }
 }
