# swagger-output.json
@@ -6,11 +6,11 @@
     "version": "1.0.0"
   },
   "host": [
-    "one04social-back-end.onrender.com"
+    "localhost:3001"
   ],
   "basePath": "/",
   "schemes": [
-    "https"
+    "http"
   ],
   "securityDefinitions": {
     "Bearer": {
@@ -346,6 +346,74 @@
         }
       }
     },
+    "/auth/lineLogin": {
+      "post": {
+        "tags": [
+          "line"
+        ],
+        "description": "line 登入",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "description": "資料格式",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "lineUserId": {
+                  "type": "string",
+                  "example": "fnuwe242352on52j3n"
+                },
+                "lineDisplayName": {
+                  "type": "string",
+                  "example": "test"
+                },
+                "linePictureUrl": {
+                  "type": "string",
+                  "example": "11111111"
+                },
+                "statusMessage": {
+                  "type": "string",
+                  "example": "test"
+                }
+              },
+              "required": [
+                "lineUserId",
+                "lineDisplayName",
+                "linePictureUrl",
+                "statusMessage"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "登入資訊",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                  "example": "success"
+                },
+                "message": {
+                  "type": "string",
+                  "example": "登入成功"
+                },
+                "data": {
+                  "type": "object",
+                  "properties": {}
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        }
+      }
+    },
     "/payment/": {
       "get": {
         "description": "",
@@ -439,6 +507,15 @@
                 }
               }
             },
+            "messageBoard": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "string"
+                }
+              }
+            },
             "name": {
               "type": "object",
               "properties": {
@@ -494,6 +571,15 @@
               }
             },
             "googleId": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "string"
+                }
+              }
+            },
+            "lineUserId": {
               "type": "object",
               "properties": {
                 "type": {
